--- a/rango/templates/rango/index.html
+++ b/rango/templates/rango/index.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango</title>
-</head>
-
 <body>
     <h1>Rango says...</h1>
+
     <div>
-        hey there partner!
+        {{ boldmessage }}
     </div>
+
+    {% if categories %}
+        <ul>
+            {% for category in categories %}
+                <li>
+                    <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
+                    (Likes: {{ category.likes }})
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <strong>There are no categories present.</strong>
+    {% endif %}
+
 </body>
-</html>
