--- a/rango/templates/rango/about.html
+++ b/rango/templates/rango/about.html
@@ -1,2 +1,13 @@
-<h1>About</h1>
-<p>This is the about page.</p>
+{% extends 'rango/base.html' %}
+
+{% block title_block %}
+    About
+{% endblock %}
+
+{% block body_block %}
+    <h1>About</h1>
+    <div>
+        <strong>{{ boldmessage }}</strong>
+    </div>
+{% endblock %}
+
