--- a/rango/templates/rango/add_category.html
+++ b/rango/templates/rango/add_category.html
@@ -1,29 +1,15 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+    Add Category
+{% endblock %}
 
-    <body>
-        <h1>Add a Category</h1>
+{% block body_block %}
+    <h1>Add a Category</h1>
 
-        <div>
-            <form id="category_form" method="post" action="/rango/add_category/">
-                {% csrf_token %}
-
-                {% for hidden in form.hidden_fields %}
-                    {{ hidden }}
-                {% endfor %}
-
-                {% for field in form.visible_fields %}
-                    {{ field.errors }}
-                    {{ field.help_text }}
-                    {{ field }} <br />
-                {% endfor %}
-
-                <input type="submit" name="submit" value="Create Category" />
-            </form>
-        </div>
-    </body>
-</html>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Create Category">
+    </form>
+{% endblock %}
