--- a/rango/templates/rango/index.html
+++ b/rango/templates/rango/index.html
@@ -1,4 +1,10 @@
-<body>
+{% extends 'rango/base.html' %}
+
+{% block title_block %}
+    Index
+{% endblock %}
+
+{% block body_block %}
     <h1>Rango says...</h1>
 
     <div>
@@ -7,18 +13,18 @@
 
     {% if categories %}
         <ul>
-            {% for category in categories %}
-                <li>
-                    <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
-                    (Likes: {{ category.likes }})
-                </li>
-            {% endfor %}
+        {% for category in categories %}
+            <li>
+                <a href="{% url 'rango:show_category' category.slug %}">
+                    {{ category.name }}
+                </a>
+                (Likes: {{ category.likes }})
+            </li>
+        {% endfor %}
         </ul>
     {% else %}
         <strong>There are no categories present.</strong>
     {% endif %}
 
-    <a href="/rango/add_category/">Add a New Category</a><br />
-
-</body>
-
+    <a href="{% url 'rango:add_category' %}">Add a New Category</a>
+{% endblock %}
