--- a/rango/templates/rango/base.html
+++ b/rango/templates/rango/base.html
@@ -19,23 +19,30 @@
     </div>
 
     <hr />
-    <div>
-        {% block sidebar_block %}
-            {% get_category_list %}
-        {% endblock %}
-    <div>
-        <ul>
-            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
-            <li><a href="{% url 'rango:about' %}">About</a></li>
-            <li><a href="{% url 'rango:index' %}">Index</a></li>
+  <div>
+    {% block sidebar_block %}
+        {% get_category_list %}
 
+        <ul>
             {% if user.is_authenticated %}
+                <!-- Show when logged in -->
+                <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
                 <li><a href="{% url 'rango:logout' %}">Logout</a></li>
             {% else %}
+                <!-- Show when NOT logged in -->
                 <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
                 <li><a href="{% url 'rango:login' %}">Login</a></li>
             {% endif %}
+
+            <!-- Always visible -->
+            <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+            <li><a href="{% url 'rango:about' %}">About</a></li>
+            <li><a href="{% url 'rango:index' %}">Index</a></li>
         </ul>
+
+    {% endblock %}
+</div>
+
 
     </div>
 </body>
